Bug Squash - 60 restantes

--- a/johnatas-henrique/css/style.css
+++ b/johnatas-henrique/css/style.css
@@ -220,7 +220,7 @@ main {
 }
 
 .gradient {
-  background: linear-gradient( white , rgb( 211 , 216 , 232 ) );  
+  background: linear-gradient( white , rgb( 211 , 216 , 232 ) );
   min-width: 980px;
 }
 
@@ -521,40 +521,27 @@ main {
   margin: 20px 0;
 }
 
-[data-type='validator-error'] {
+[ data-type = 'validator-error' ] {
   font-size: 13px;
   position: absolute;
   z-index: 10;
   margin-top: 2px;
-  color: #ffffff;
-  background: rgb(200, 53, 53);
-  box-shadow: 0 6px 2px -2px rgba(211, 77, 77, 0.47);
+  color: white;
+  background: rgb( 200 , 53 , 53 );
+  box-shadow: 0 6px 2px -2px rgba( 211 , 77 , 77 , 0.47 );
   padding: 4px 10px;
   border-radius: 1px;
   pointer-events: none;
 }
 
-[data-type='validator-error']:before {
+[ data-type = 'validator-error' ]:before {
   content: '';
   width: 0;
   height: 0;
   top: -5px;
   position: absolute;
   left: 6px;
-  border-left: 5px solid rgba(0, 0, 0, 0);
-  border-right: 5px solid rgba(0, 0, 0, 0);
-  border-bottom: 5px solid #c83535;
+  border-left: 5px solid rgba( 0 , 0 , 0 , 0 );
+  border-right: 5px solid rgba( 0 , 0 , 0 , 0 );
+  border-bottom: 5px solid rgb( 200 , 53 , 53 );
 }
-
-/* .error {
-  background-image: url( '../imagens/button-helpers.png' );
-  background-position: 0 0;
-  background-repeat: no-repeat;
-  background-size: auto;
-  display: inline;
-  height: 21px;
-  position: absolute;
-  right: 9px;
-  top: 9px;
-  width: 21px;
-} */
